[project]
name = "reddit-finder"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncio>=3.4.3",
    "asyncpraw>=7.8.1",
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "json-repair>=0.46.2",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.21",
    "langgraph>=0.4.8",
    "langsmith>=0.3.45",
    "litellm>=1.72.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "praw>=7.8.1",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "rich>=14.0.0",
    "uvicorn>=0.34.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
